# xous-core

apps/labyrinth/: Cargo.toml
apps/labyrinth/src/: labyrinth.rs  main.rs
apps/social/: Cargo.toml
apps/social/src/: client.rs  main.rs  social.rs
