[package]
name = "labyrinth"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.14"
num-derive = {version = "0.3.3", default-features = false}
num-traits = {version = "0.2.14", default-features = false}
xous = { path = "../../xous-rs" }
xous-ipc = { path = "../../xous-ipc" }
log-server = { path = "../../services/log-server" }
ticktimer-server = { path = "../../services/ticktimer-server" }
xous-names = { path = "../../services/xous-names" }
gam = {path = "../../services/gam" }
trng = {path = "../../services/trng"}
modals = {path = "../../services/modals"}
com = {path = "../../services/com"} # for the gyro read
locales = {path = "../../locales"}