[package]
name = "social"
version = "0.1.0"
edition = "2021"
description = "ActivityPub client"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.14"
num-derive = {version = "0.3.3", default-features = false}
num-traits = {version = "0.2.14", default-features = false}
xous = "0.9.24"
xous-ipc = "0.9.24"
log-server = { package = "xous-api-log", version = "0.1.18" }
ticktimer-server = { package = "xous-api-ticktimer", version = "0.9.18" }
xous-names = { package = "xous-api-names", version = "0.9.20" }
gam = {path = "../../services/gam" }
graphics-server = {path = "../../services/graphics-server" }
trng = {path = "../../services/trng"}
serde = { version = "1.0", features = [ "derive" ] }
ureq = { version = "2.5", features = ["json"] }